<?xml version="1.0"?>
<package format="2">
  <name>velodyne_gazebo_plugins</name>
  <version>1.0.9</version>
  <description>
    Gazebo plugin to provide simulated data from Velodyne laser scanners.
  </description>

  <license>BSD</license>
  <author>Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <maintainer email="azmyin12@gmail.com">Azmyin Md. Kamal</maintainer>
  <url type="repository">https://github.com/Mechazo11/velodyne_simulator_ros2.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2</depend>

  <build_depend>gz-cmake3</build_depend>
  <build_depend>gz-msgs10</build_depend>
  <build_depend>gz-physics7</build_depend>
  <build_depend>gz-sim8</build_depend>
  <build_depend>gz-sensors8</build_depend>
  <build_depend>ros_gz_sim</build_depend>
  <build_depend>ros_gz_bridge</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>gz-cmake3</exec_depend>
  <exec_depend>gz-msgs10</exec_depend>
  <exec_depend>gz-physics7</exec_depend>
  <exec_depend>gz-sim8</exec_depend>
  <exec_depend>gz-sensors8</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
